--- a/sections/recetas.html
+++ b/sections/recetas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/estilos.css">
     <title>Recetas - Dietetica 38</title>
 </head>
@@ -19,24 +21,24 @@
             </div>
 
             <div>
-                <ul>
-                    <li>
+                <ul class="listaNav">
+                    <li class="elementosListaNav">
                      <a href="../index.html">INICIO</a>
                     </li>
 
-                    <li>
+                    <li class="elementosListaNav">
                      <a href="productos.html">PRODUCTOS</a>
                     </li>
 
-                    <li>
+                    <li class="elementosListaNav">
                      <a href="ubicacion.html">UBICACIÓN</a>
                    </li>
 
-                   <li>
+                   <li class="elementosListaNav">
                      <a href="recetas.html">RECETAS</a>
                    </li>
 
-                   <li>
+                   <li class="elementosListaNav">
                      <a href="contacto.html">CONTACTO</a>
                    </li>
 
@@ -77,6 +79,13 @@
         <a href=""><img src="https://img.icons8.com/ios/50/000000/instagram-new--v1.png" alt="instagram"></a>
 
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 
 
