--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="dietetica, alimentos, 38, productos">
+  <meta name="description" content="Dietética 38 es el comercio que estabas buscando. Tenemos lo mejor para tu alimentación. Harinas, frutos secos, productos sin TACC y más.">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles/estilos.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="icon" type="image/ico" href="img/favicon.ico">
   <title>Dieteica 38</title>
 </head>
 
 <body>
 
   <header>
+
 
     <div href="index.html" class="logoTitulo">
 
@@ -64,13 +68,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/dietetica38.jpg" class="d-block w-100" alt="...">
+                <img src="img/index1.jpeg" class="d-block w-100" alt="dietetica 38 por dentro">
               </div>
               <div class="carousel-item">
-                <img src="./img/dietetica38.jpg" class="d-block w-100" alt="...">
+                <img src="img/index2.jpeg" class="d-block w-100" alt="mueble de dietetica 38">
               </div>
               <div class="carousel-item">
-                <img src="./img/dietetica38.jpg" class="d-block w-100" alt="...">
+                <img src="img/index3.jpeg" class="d-block w-100" alt="ultimo cajon de dietetica 38">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -95,18 +99,9 @@
 
 
           <p class="parrafoDietetica">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores sapiente corporis animi magnam impedit
-            quia hic doloribus expedita. Rerum veritatis et excepturi expedita, velit dolorem aperiam incidunt voluptate
-            assumenda.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic distinctio esse optio asperiores maxime iure
-            commodi ratione architecto est delectus quisquam officiis dolorem sunt, dicta perferendis illo facere
-            blanditiis autem.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem officia cupiditate tenetur labore
-            pariatur aut necessitatibus voluptas, vero, harum earum rem doloribus! Nemo recusandae maiores vero vitae
-            perspiciatis quas ea!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem hic dolorem perspiciatis doloribus totam
-            dolor, consectetur fuga magni voluptatem incidunt ex consequatur ipsa veritatis provident maiores. Modi
-            beatae natus enim!
+            Bienvenido a Dietética 38. Somos un local de barrio en donde nos dedicamos a poder darle lo mejor a todos nuestros clientes. Estamos dispuestos a poder entregarte la mejor calidad en productos y además brindarte una atención única dentro de lo que es nuestro negocio. Aquí podrás encontrarte con lo mejor de la comida dietética, celíaca, vegana, vegetariana y mucho más. Si tu deseo es poder armar una buena dieta en base a alimentos sanos y frescos, estás en el lugar correcto.
+            El local es atendido por la Familia Mercado, te esperamos con los brazos abiertos para que puedas descubrir todas las cosas que tenemos para nuestros clientes. Verás que en poco tiempo podrás venir cuantas veces quieras.
+
           </p>
 
 
