--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
 
 
           <p class="parrafoDietetica">
-            Bienvenido a Dietética 38. Somos un local de barrio en donde nos dedicamos a poder darle lo mejor a todos nuestros clientes. Estamos dispuestos a poder entregarte la mejor calidad en productos y además brindarte una atención única dentro de lo que es nuestro negocio. Aquí podrás encontrarte con lo mejor de la comida dietética, celíaca, vegana, vegetariana y mucho más. Si tu deseo es poder armar una buena dieta en base a alimentos sanos y frescos, estás en el lugar correcto.
-            El local es atendido por la Familia Mercado, te esperamos con los brazos abiertos para que puedas descubrir todas las cosas que tenemos para nuestros clientes. Verás que en poco tiempo podrás venir cuantas veces quieras.
+            <b>Bienvenido a Dietética 38. Somos un local de barrio en donde nos dedicamos a poder darle lo mejor a todos nuestros clientes.</b> Estamos dispuestos a poder entregarte la mejor calidad en productos y además brindarte una atención única dentro de lo que es nuestro negocio. Aquí podrás encontrarte con lo mejor de la comida dietética, celíaca, vegana, vegetariana y mucho más.
+          </p>
 
+          <p class="parrafoDietetica">
+            Si tu deseo es poder armar una buena dieta en base a alimentos sanos y frescos, estás en el lugar correcto.
+            <b>El local es atendido por la Familia Mercado, te esperamos con los brazos abiertos para que puedas descubrir todas las cosas que tenemos para nuestros clientes. Verás que en poco tiempo podrás venir cuantas veces quieras.</b>
           </p>
 
 
@@ -124,9 +127,11 @@
 
   <footer>
 
-    <a href=""><img src="https://img.icons8.com/ios/50/000000/facebook-new.png" alt="facebook"></a>
-    <a href=""><img src="https://img.icons8.com/ios/50/000000/twitter--v1.png" alt="twitter"></a>
-    <a href=""><img src="https://img.icons8.com/ios/50/000000/instagram-new--v1.png" alt="instagram"></a>
+    <div class="iconos">
+      <a href=""><img src="https://img.icons8.com/ios/50/000000/facebook-new.png" alt="facebook"></a>
+      <a href=""><img src="https://img.icons8.com/ios/50/000000/twitter--v1.png" alt="twitter"></a>
+      <a href=""><img src="https://img.icons8.com/ios/50/000000/instagram-new--v1.png" alt="instagram"></a>
+    </div>
 
   </footer>
 
