--- a/sections/recetas.html
+++ b/sections/recetas.html
@@ -63,13 +63,13 @@
                     Las recetas de Dietetica 38
                     </h1>
 
-                    <p class="text-center parrafosProductos">Dentro de esta sección encontrarás algunas de las más sencillas recetas que puedes inventar con productos dietéticos. No necesariamente son productos que puedes encontrar en nuestro local, sino que nuestra idea es poder brindarte ayudas para empezar a tener un hábito saludable con las comidas. Lee atentamente y dirígete hacia las mejores recetas de comidas básicas para ti. Recordá que la alimentación es algo más que importante en nuestro día a día.</p>
+                    <p class="text-center parrafosProductos"><b>Dentro de esta sección encontrarás algunas de las más sencillas recetas que puedes inventar con productos dietéticos.</b> No necesariamente son productos que puedes encontrar en nuestro local, sino que nuestra idea es poder brindarte ayudas para empezar a tener un hábito saludable con las comidas. Lee atentamente y dirígete hacia las mejores recetas de comidas básicas para ti. Recordá que la alimentación es algo más que importante en nuestro día a día.</p>
 
                 </div>
 
             </div>
 
-            <div class="guacamole item8">
+            <div class="guacamole item8" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
 
                 <div class="row2">
 
@@ -77,11 +77,12 @@
 
                     <img src="../img/guacamole.jpg" class="fotoGuacamole img-fluid" alt="guacamole">
 
-                    <p class="parrafosProductos text-center">El guacamole es una de las comidas más típicas dentro de México. Allí es donde se suele comer en los famosos tacos de aquel país. Podemos decir que hace poco tiempo, la Palta comenzó a ser famosa dentro de nuestro país y hoy en día podemos verla reiteradas veces. Tenemos que destacar que es algo más que sencillo poder preparar guacamole. Simplemente, deberás aplastar una Palta madura, y agregarle Tomate, Cebolla y un poco de Limón. </p>
+                    <p class="parrafosProductos text-center">El guacamole es una de las comidas más típicas dentro de México. Allí es donde se suele comer en los famosos tacos de aquel país. Podemos decir que hace poco tiempo, la Palta comenzó a ser famosa dentro de nuestro país y hoy en día podemos verla reiteradas veces. <b>Tenemos que destacar que es algo más que sencillo poder preparar guacamole. Simplemente, deberás aplastar una Palta madura, y agregarle Tomate, Cebolla y un poco de Limón.</b>
+                    </p>
                 </div>
             </div>
 
-            <div class="hummus item9">
+            <div class="hummus item9" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
 
                 <div class="row2">
 
@@ -89,13 +90,15 @@
 
                     <img src="../img/hummus de garbanzo.jpg" class="img-fluid" alt="hummus">
 
-                    <p class="parrafosProductos text-center">El Hummus de Garbanzos es una fuente de proteína bastante importante que nos puede brindar mucha energía en nuestro día. Si eres de las personas que se dedica a entrenar habitualmente, déjame decirte que esto te encantara. El dip del que podremos hablar en esta casación se relaciona directamente con los Garbanzos, muy nutritivos. Esto se hierven en una olla por tres horas y luego los podes mixear con el mixer electronico. Un poco de aceite de oliva, un poco de agua y limón y estará todo listo para que comas tu Hummus.</p>
+                    <p class="parrafosProductos text-center">El Hummus de Garbanzos es una fuente de proteína bastante importante que nos puede brindar mucha energía en nuestro día. Si eres de las personas que se dedica a entrenar habitualmente, déjame decirte que esto te encantara. El dip del que podremos hablar en esta casación se relaciona directamente con los Garbanzos, muy nutritivos. <b>Esto se hierven en una olla por tres horas y luego los podes mixear con el mixer electronico. Un poco de aceite de oliva, un poco de agua y limón y estará todo listo para que comas tu Hummus.</b>
+                    
+                    </p>
 
                 </div>
 
             </div>
 
-            <div class="empanadas item10">
+            <div class="empanadas item10" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
 
                 <div class="row2">
 
@@ -103,8 +106,8 @@
 
                     <img src="../img/empanadas integrales.jpg" class="img-fluid" alt="empanadas">
 
-                    <p class="parrafosProductos text-center">Las empanadas integrales son de lo mejor para comer en familia. El relleno te lo dejaremos a ti, pero la masa la podrás hacer de buena manera. Simplemente, necesitarás harina integral, aceite de oliva, agua, limón y sal. De esta forma es como al combinar los ingredientes nos encontraremos con una masa la cual nos dará la libertad de poder crear lo que queramos. Nosotros elegimos las empanadas, pero también puedes optar por una tarta.
-                        !</p>
+                    <p class="parrafosProductos text-center">Las empanadas integrales son de lo mejor para comer en familia. El relleno te lo dejaremos a ti, pero la masa la podrás hacer de buena manera. <b>Simplemente, necesitarás harina integral, aceite de oliva, agua, limón y sal. De esta forma es como al combinar los ingredientes nos encontraremos con una masa la cual nos dará la libertad de poder crear lo que queramos.</b> Nosotros elegimos las empanadas, pero también puedes optar por una tarta.
+                    </p>
 
                 </div>
 
