--- a/sections/ubicacion.html
+++ b/sections/ubicacion.html
@@ -86,12 +86,12 @@
 
                 <h1>Ubicación</h1>
 
-                <p class="parrafosProductos">¡Qué bueno que estés acá! Eso significa que tenés ganas de saber en donde estamos. Si tu idea es poder venir a visitarnos, te contamos que estamos en el barrio de “La Cumbre”. Para ser más precisos, nos encontramos en la Avenida 38 entre las calles 134 y 134 bis. De lejos podrás ver nuestras banderas flameando más que nunca. La Dietética 38 abre al público de lunes a sábados de 9:30 hs a 13 hs y de 16:30 hs a 19:30 hs. También nos podés encontrar por el mapa que está debajo de donde nos estás leyendo ¡Te esperamos con los brazos abiertos y realmente queremos que encuentres lo que buscas!</p>
+                <p class="parrafosProductos">¡Qué bueno que estés acá! Eso significa que tenés ganas de saber en donde estamos. Si tu idea es poder venir a visitarnos, te contamos que estamos en el barrio de “La Cumbre”. <b>Para ser más precisos, nos encontramos en la Avenida 38 entre las calles 134 y 134 bis. De lejos podrás ver nuestras banderas flameando más que nunca.</b> La Dietética 38 abre al público de lunes a sábados de 9:30 hs a 13 hs y de 16:30 hs a 19:30 hs. También nos podés encontrar por el mapa que está debajo de donde nos estás leyendo ¡Te esperamos con los brazos abiertos y realmente queremos que encuentres lo que buscas!</p>
             </div>
 
             <h2 class="item7">¡Encontranos acá!</h2>
 
-            <div class="mapaUbi item5">
+            <div class="mapaUbi item5" data-aos="zoom-in">
 
 
                 <img src="../img/ubicacion3.png" class="img-fluid" alt="mapa">
